part1/spinnaker/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-services
  namespace: spinnaker
  annotations:
    ingress.kubernetes.io/rewrite-target: /
spec:
  backend:
    serviceName: default-http-backend
    servicePort: 80
  rules:
  - host: front50.MINIKUBE_IP.xip.io
    http:
      paths:
      - path: /
        backend:
          serviceName: front50
          servicePort: 8080

  - host: clouddriver.MINIKUBE_IP.xip.io
    http:
      paths:
      - path: /
        backend:
          serviceName: clouddriver
          servicePort: 7002

  - host: orca.MINIKUBE_IP.xip.io
    http:
      paths:
      - path: /
        backend:
          serviceName: orca
          servicePort: 8083

  - host: gate.MINIKUBE_IP.xip.io
    http:
      paths:
      - path: /
        backend:
          serviceName: gate
          servicePort: 8084

  - host: spinnaker.MINIKUBE_IP.xip.io
    http:
      paths:
      - path: /
        backend:
          serviceName: deck
          servicePort: 80
      - path: /gate
        backend:
          serviceName: gate
          servicePort: 8084

  - host: igor.MINIKUBE_IP.xip.io
    http:
      paths:
      - path: /
        backend:
          serviceName: igor
          servicePort: 8088
